# Floraison

./: .gitignore  Cargo.toml  DEV_NOTES.md  NOTES.md  README.md  build-wasm.ps1  build-wasm.sh  package.json
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
docs/: FINAL_POLISH_PLAN.md  ROADMAP.md  TECHNICAL_OVERVIEW.md  USER_GUIDE.md  known-issues.md  performance-metrics.md
docs/roadmap/: README.md
docs/roadmap/phase-1/: epic-01-project-setup.md  epic-02-core-math-library.md  epic-03-floral-components.md  epic-04-single-flower-assembly.md  epic-05-frontend-foundation.md
docs/roadmap/phase-2/: epic-06-advanced-petal-geometry.md  epic-07-complete-floral-components.md  epic-08-floral-diagram-system.md  epic-09-ui-enhancement.md
docs/roadmap/phase-3/: epic-10-inflorescence-foundation.md  epic-11-simple-inflorescence-patterns.md  epic-12-complex-patterns-polish.md
docs/roadmap/phase-4/: epic-13-gltf-export.md  epic-14-ui-polish-presets.md  epic-15-documentation-demo.md
floraison-components/: Cargo.toml
floraison-components/src/: assembly.rs  diagram.rs  lib.rs  petal.rs  pistil.rs  receptacle.rs  sepal.rs  stamen.rs
floraison-core/: Cargo.toml
floraison-core/src/: lib.rs
floraison-core/src/geometry/: mesh.rs  surface_revolution.rs  sweep.rs
floraison-core/src/math/: bezier.rs  bspline.rs  curves.rs  phyllotaxis.rs  vector.rs
floraison-inflorescence/: Cargo.toml
floraison-inflorescence/src/: aging.rs  assembly.rs  lib.rs
floraison-inflorescence/src/patterns/: compound_raceme.rs  compound_umbel.rs  corymb.rs  dichasium.rs  drepanium.rs  mod.rs  raceme.rs  spike.rs  umbel.rs
floraison-ui/: .gitignore  package-lock.json  package.json  svelte.config.js  vite.config.ts
floraison-ui/src/lib/: presets.ts
floraison-ui/src/lib/components/ui/: LoadingSpinner.svelte  ParameterPanel.svelte
floraison-ui/src/lib/components/viewer/: ThreeViewer.svelte  ViewerControls.svelte
floraison-ui/src/lib/stores/: inflorescence.ts  parameters.ts  viewer.ts
floraison-ui/src/lib/three/: exporter.ts  mesh-converter.ts  scene.ts  screenshot.ts
floraison-ui/src/lib/utils/: colors.ts  curves.ts  random.ts
floraison-ui/src/lib/wasm/: types.ts
floraison-ui/src/lib/workers/: generation.worker.ts  manager.ts  types.ts
floraison-ui/src/routes/: +layout.ts  +page.svelte
floraison-wasm/: Cargo.toml
floraison-wasm/src/: lib.rs
