[workspace]
resolver = "2"
members = [
    "floraison-core",
    "floraison-components",
    "floraison-inflorescence",
    "floraison-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Floraison Contributors"]
license = "MIT"
repository = "https://github.com/anthropics/floraison"

[workspace.dependencies]
# Math and geometry
glam = { version = "0.29", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM bindings
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
js-sys = "0.3"

# Internal dependencies
floraison-core = { path = "./floraison-core" }
floraison-components = { path = "./floraison-components" }
floraison-inflorescence = { path = "./floraison-inflorescence" }

[profile.release]
# Optimize for size (important for WASM)
opt-level = 'z'
lto = true
codegen-units = 1
strip = true

[profile.release.package."*"]
opt-level = 'z'
