[package]
name = "floraison-components"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
floraison-core = { workspace = true }
glam = { workspace = true }
serde = { workspace = true, optional = true }
rand = { version = "0.8", features = ["small_rng"] }

[features]
default = []
serde = ["dep:serde", "floraison-core/serde"]
